--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"> </script>
     <!--<script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>-->
     <!-- built files will be auto injected -->
   </body>
